# reth-payload-validator

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  VALIDATION_LOGIC.md
.github/workflows/: build.yaml  check-lint-test.yaml  ci.yml
src/: cli_ext.rs  lib.rs  main.rs
src/rpc/: api.rs  mod.rs  result.rs  types.rs  utils.rs  validation.rs
test/: shoot_payloads.sh  shoot_single_payload.sh
test/data/: rpc_payload.json  single_payload.json
tests/: generate_rpc_message.sh  shoot_payloads.sh  shoot_single_payload.sh
tests/data/: single_payload.json
tests/integration/: http.rs
tests/it/: http.rs  main.rs
