[package]
name = "reth-payload-validator"
version = "0.1.0"
edition = "2021"
default-run = "reth-payload-validator"

# Here to support the Docker build.
[[bin]]
name = "reth-payload-validator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
async-trait = "0.1.73"
clap = "4.4.5"
derivative = "2.2.0"
eyre = "0.6.8"
hex = "0.4.3"
jsonrpsee = "0.20.1"
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.3" }
reth-db = { features = ["test-utils"], git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.3"}
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.3", features=["test-utils"]}
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.3"}
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.3"}
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.3"}
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_with = "3.3.0"
tokio = "1.35"
uuid = "1.6.1"
ruint = "1.12.1"

[dev-dependencies]
tokio = "1.32.0"
